mongo-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db-part
  template:
    metadata:
      name: mongo-db-pod
      labels:
        app: mongo-db-part
    spec:
      containers:
      - name: chatapp-mongo-db
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
