front-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat-app
spec:
  type: NodePort
  selector:
    app: frontend-part
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080   # can be any free port between 30000–32767
