mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: chat-app
spec:
  selector:
    app: mongo-db-part
  ports:
  - port: 27017

    targetPort: 27017
