network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-network-policy
  namespace: chat-app
spec:
  podSelector:
    matchLabels:
      app: mongo-db-part
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend-app
    ports:
    - protocol: TCP
      port: 27017
